examples/neg/unhandledmain.effekt
module unhandledmain

effect Flip(): Bool

def main() = { do Flip(); () }
